# MatEnsemble

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  PAPER.md  README.md  environment.yaml  install.sh  pyproject.toml  release.sh  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: .flake8  lint.yml  pull_request_template.md  pyproject.toml
.github/workflows/: ci.yml  dev-containers.yaml  lint.yml  publish-mcp.yml  publish-pypi.yaml  publish.yml  release-containers.yaml
containers/: Dockerfile.base-baseline  Dockerfile.base-baseline-arm64  Dockerfile.base-frontier  Dockerfile.base-perlmutter  Dockerfile.base-perlmutter2  Dockerfile.matensemble.baseline  Dockerfile.matensemble.frontier  Dockerfile.matensemble.perlmutter  ornl-ca.pem  tmp.txt
containers/frontier/: Dockerfile.base  Dockerfile.base.debug  Dockerfile.base.june_17  Dockerfile.matensemble
containers/linux/: Containerfile  Dockerfile  Dockerfile.base-baseline  Dockerfile.base-baseline-arm64  Dockerfile.baseline-ompi  Dockerfile.baseline-thinkcentre  Dockerfile.matensemble
containers/pathfinder/: Dockerfile.base  Dockerfile.matensemble
containers/perlmutter/: Dockerfile.MPICH.mpi4py  Dockerfile.Python3.12  Dockerfile.base  Dockerfile.base.lammps  Dockerfile.flux  Dockerfile.matensemble
docs/: requirements.txt
docs/source/: architecture.rst  conf.py  design.rst  examples.rst  index.rst  installation.rst  mcp.rst  mcp_agent.rst  overview.rst  quickstart.rst  reference.rst  team.rst  tutorials.rst
example_workflows/: chores_example.py  dependency_example.py  examples.toml  mpi_example.py  strategy_injection_example.py
example_workflows/dependency_example/: functions.py  run_workflow.py  workflow.py
example_workflows/general_gpu_task_submit/: example_matensemble_gpu.py
images/: MatEnsemble.txt
matensemble/: TODO.md  __init__.py  driver.py  fluxlet.py  logger.py  manager.py  matflux.py  matfluxGen.py  onlineMD.py
matensemble.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
media/: MatEnsemble.txt
paper/: paper.md
scripts/: build_docs.sh  install-matensemble-agent.sh  install.sh  install_frontier.sh  release.sh  spack.yaml
src/: jobflow_reference.md  mockup_worker.md  reference.md
src/mcp_matensemble/: README.md  SPECIFICATION.md  pyproject.toml  server.py  tools.py
src/mcp_matensemble/src/mcp_matensemble/: __init__.py  context.py  contracts.py  dashboard.py  environment.py  examples.py  resources.py  scheduler.py  scriptgen.py  security.py  server.py  systems.py  v1.py
src/mcp_matensemble/src/mcp_matensemble/installers/: __init__.py  cli.py  doctor.py  installer.py  site_cli.py
src/mcp_matensemble/tests/: test_context.py  test_dashboard.py  test_environment.py  test_install_script.py  test_installers.py  test_mcp_dashboard.py  test_package_metadata.py  test_resources.py  test_scheduler.py  test_scriptgen.py  test_server.py  test_systems.py  test_v1.py
tests/: conftest.py  test_chore.py  test_chore_registry.py  test_dashboard.py  test_dynopro.py  test_fluxlet.py  test_init.py  test_job.py  test_logger.py  test_manager.py  test_manager_dynamic_add.py  test_model.py  test_pipeline.py  test_pipeline_user_strategy.py  test_redis_service.py  test_runtime_worker.py  test_runtime_worker_paths.py  test_strategy.py  test_utils.py
(+764 files in other folders)
