[project]
name = "mcp-matensemble"
version = "0.5.2"
description = "Small Model Context Protocol server for MatEnsemble context and dashboard access."
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Soumendu Bagchi", email = "soumendubagchi@gmail.com" },
    { name = "Kaleb Duchesneau", email = "kalebduchesneau@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.27.0",
]

[project.urls]
Homepage = "https://github.com/FredDude2004/MatEnsemble"
Documentation = "https://matensemble.readthedocs.io/"
Repository = "https://github.com/FredDude2004/MatEnsemble"
Issues = "https://github.com/FredDude2004/MatEnsemble/issues"

[project.scripts]
mcp-matensemble = "mcp_matensemble.server:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
